# zqnt-client-sdk-python

./: .coverage  .gitattributes  .gitignore  .gitmodules  .uv.toml  DEVELOPMENT.md  README.md  main.py  pyproject.toml
.github/workflows/: hotfix.yml  main.yml  pr.yml  release.yml
client_sdk/: __init__.py  exceptions.py  zequent_client.py
client_sdk/config/: __init__.py  env_loader.py  resilience.py  service_config.py
client_sdk/grpc_/: __init__.py  channel_factory.py  resilience.py
client_sdk/live_data/: __init__.py  _converters.py  client.py  stream_handle.py
client_sdk/mission_autonomy/: __init__.py  _converters.py  client.py
client_sdk/models/: __init__.py  _converters.py  _validation.py  common.py  enums.py  live_data.py  mission_autonomy.py  remote_control.py  remote_control_input.py  task_config.py
client_sdk/remote_control/: __init__.py  client.py  manual_control_session.py
scripts/: ci.sh  generate_protos.sh  setup-dev.sh  test.sh
tests/: conftest.py
tests/unit/: test_channel_factory.py  test_live_data_client.py  test_manual_control_session.py  test_mission_autonomy_client.py  test_remote_control_client.py  test_resilience.py  test_unary_resilience_wiring.py  test_zequent_client.py
