[project]
name = "zqnt-client-sdk"
version = "1.0.0"
description = "Python Client SDK for the Zequent Framework"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
]

[project.optional-dependencies]
dotenv = [
    "python-dotenv>=1.0.0",
]
dev = [
    "grpcio-tools>=1.60.0",
    "grpc-stubs>=1.53.0",
    "mypy-protobuf>=3.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["client_sdk"]
