[project]
name = "zqnt-client-sdk"
version = "1.0.1"
description = "Python Client SDK for the Zequent Framework"
requires-python = ">=3.12"
dependencies = [
    "grpcio>=1.60.0",
    "protobuf>=4.25.0",
    "zqnt-utils>=1.2.0",
]

[project.optional-dependencies]
dotenv = [
    "python-dotenv>=1.0.0",
]
dev = [
    "grpcio-tools>=1.60.0",
    "grpc-stubs>=1.53.0",
    "mypy-protobuf>=3.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.12",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["client_sdk/generated/**"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]  # line-too-long (handled by formatter)

[tool.ruff.lint.per-file-ignores]
# Local aliases for nested protobuf classes keep PascalCase to match the proto names
"client_sdk/mission_autonomy/_converters.py" = ["N806"]
# CircuitBreakerOpen is a state name, not a generic error
"client_sdk/grpc_/resilience.py" = ["N818"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["client_sdk"]
[tool.uv.sources]
zqnt-utils = { git = "https://github.com/Zequent/zqnt-utils-python", rev = "v1.2.3" }
#zqnt-utils = { path = "../../../utils/zqnt-utils-python", editable = true }

